full width view

--- a/src/routes/view/panel/panel.component.scss
+++ b/src/routes/view/panel/panel.component.scss
@@ -54,6 +54,8 @@ main {
                 top: -100px;
 
                 padding-bottom: 40vh;
+
+                width: 100%;
             }
         }
     }
